# TTengine-2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_ANIMATION_BVH.md  README_ANIMATION_TISSU.md
shaders/: bg.frag  bg.vert  bgV2.frag  bgV2.vert  cull.comp  deffered.frag  deffered.vert  hello_scene.frag  hello_scene.vert  portal.frag  portal.vert  shading.comp  shadow.frag  shadow.mesh  shadow.vert  test.comp  test.comp.spv
shaders/spirv/: bg.frag.spv  bg.vert.spv  hello_scene.frag.spv  hello_scene.vert.spv
src/: IRessource.hpp  Iapp.hpp  IinputController.hpp  app.cpp  app.hpp  buffer.cpp  buffer.hpp  circular_queue.hpp  command_buffer.cpp  command_buffer.hpp  destroyable.hpp  device.cpp  device.hpp  dynamic_renderpass.cpp  dynamic_renderpass.hpp  engine.cpp  engine.hpp  i_input_controller.hpp  image.cpp  image.hpp  main.cpp  mesh_io.cpp  mesh_io.h  movement_controller.cpp  movement_controller.hpp  struct.hpp  structs_vk.hpp  swapchain.cpp  swapchain.hpp  utils.hpp  vkRef.hpp  vk_mem_alloc.h  window.cpp  window.hpp
src/GPU_data/: buffer.cpp  buffer.hpp  image.cpp  image.hpp
src/commandBuffer/: commandPool_handler.cpp  commandPool_handler.hpp  command_buffer.cpp  command_buffer.hpp
src/descriptor/: descriptorSet.cpp  descriptorSet.hpp  descriptorSetLayout.cpp  descriptorSetLayout.hpp
src/descriptorSet/: descriptorSet.cpp  descriptorSet.hpp  descriptorSetLayout.cpp  descriptorSetLayout.hpp
src/math/: fov.hpp  quaternion_convertor.hpp
src/scene/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  shape_init.cpp
src/scene/objects/: animaticObj.cpp  animaticObj.hpp  collision_obj.cpp  collision_obj.hpp  simulateObj.hpp
src/scene/objects/animatic/: BVH.cpp  BVH.h  BVHAxis.h  BVHJoint.cpp  BVHJoint.h
src/scene/objects/simulation/: CalculsImpl.cpp  CalculsMSS.cpp  MSS.cpp  MSS.h  Noeuds.h  ObjetSimuleMSS.cpp  ObjetSimuleMSS.h  Param.cpp  Properties.cpp  Properties.h  SolveurExpl.cpp  SolveurExpl.h  SolveurImpl.cpp  SolveurImpl.h  simu_scene.cpp  simu_scene.h
src/sceneV2/: IIndirectRenderable.hpp  IRenderable.hpp  Ianimatic.hpp  Icollider.hpp  Ihitable.hpp  Irenderable.hpp  cameraV2.cpp  cameraV2.hpp  container.hpp  i_object_file_loader.hpp  light.cpp  light.hpp  main_controller.cpp  main_controller.hpp  main_controller_col.cpp  main_controller_col.hpp  mesh.cpp  mesh.hpp  node.cpp  node.hpp  objLoader.cpp  objLoader.hpp  portal_controller.cpp  portal_controller.hpp  render_data.hpp  scene.cpp  scene.hpp  shape_init.cpp  staticMeshObj.hpp
src/sceneV2/animatic/: simulateObj.hpp  skeletonObj.cpp  skeletonObj.hpp
src/sceneV2/animatic/simulation/: CalculsImpl.cpp  CalculsMSS.cpp  MSS.cpp  MSS.h  ObjetSimuleMSS.cpp  ObjetSimuleMSS.h  Param.cpp  Properties.cpp  Properties.h  SolveurExpl.cpp  SolveurExpl.h  SolveurImpl.cpp  SolveurImpl.h
src/sceneV2/animatic/skeleton/: BVH.h  BVHChannel.cpp  BVHChannel.h  BVHJoint.cpp  BVHJoint.h
src/sceneV2/collision/: collision_obj.cpp  collision_obj.hpp
src/sceneV2/loader/: gltf_loader.cpp  gltf_loader.hpp
src/sceneV2/renderable/: basicMeshObj.cpp  basicMeshObj.hpp  basocMeshObj.cpp  portalObj.cpp  portalObj.hpp  staticMeshObj.cpp  staticMeshObj.hpp
src/shader/: pipeline.hpp  shader.cpp  shader.hpp
src/shader/pipeline/: compute_pipeline.cpp  compute_pipeline.hpp  graphic_pipeline.cpp  graphic_pipeline.hpp
src/synchronisation/: fence.cpp  fence.hpp  semaphore.cpp  semaphore.hpp
